ID-1977: Flere CRL'er for pre-load